# pyqt-widget-kit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mdi_scatter_plot.py  pyproject.toml
.github/: release.yml
.github/workflows/: release.yml  tests.yml
docs/: settings.md
examples/: base_figure_demo.py  pill_selector_demo.py  scatter_figure_demo.py  settings_window_demo.py
src/pyqt_widget_kit/: __init__.py  buttons.py  combo_boxes.py  file_inputs.py  graph.py  line_edits.py  list_widgets.py  pill_selector.py  resources.py  scatter.py  sliders.py  widgets.py
src/pyqt_widget_kit/settings/: __init__.py  spec.py  typed_helpers.py  window.py
src/pyqt_widget_kit/styles/: settings.qss  widgets.qss
tests/: test_graph.py  test_imports.py  test_scatter.py
